--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   "scripts": {
     "test": "node index"
   },
-  "repository": {
+  "repository": {https
     "type": "git",
-    "url": "git+https://github.com/benisadewa/kntnbotwa"
+    "url": "git+https://github.com/defanjayani/dhaifan"
   },
   "keywords": [
     "k"
@@ -42,7 +42,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/benisadewa/kntnbotwa/issues"
+    "url": "https://github.com/defanjayani/dhaifan/issues"
   },
-  "homepage": "https://github.com/benisadewa/kntnbotwa#readme"
+  "homepage": "https://github.com/defanjayani/dhaifan#readme"
 }
