--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/defanjayani/dhaifan"
+    "url": "git+https://github.com/defanjayani/defanjayani"
   },
   "keywords": [
     "k"
@@ -42,7 +42,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/defanjayani/dhaifan/issues"
+    "url": "https://github.com/defanjayani/defanjayani/issues"
   },
-  "homepage": "https://github.com/defanjayani/dhaifan#readme"
+  "homepage": "https://github.com/defanjayani/defanjayani#readme"
 }
